feat(zeebe): import zeebe process instance data (#3583)
relates to OPT-5169